Don't use LinkedList any more
Signed-off-by: Sven Strickroth <email@cs-ware.de>